0026511: Build fails with VTK 6.3rc1

Obsolete typedef "vtkFloatingPointType" is replaced by "double" in VIS and DRAW